# cdc-research

./: .gitignore  README.md  RESEARCH.md
.github/workflows/: bench.yml
go/: go.mod
go/cmd/fastcdc-research/: main.go
go/pkg/fastcdc/: fastcdc.go  fastcdc_test.go  gear.go
rust/: Cargo.toml  config.toml
rust/benches/: cdc_bench.rs
rust/src/: chunk.rs  config.rs  file.rs  gear.rs  lib.rs  main.rs  mod.rs
tests/data/: base.txt  large_base.txt  large_modified.txt  large_shifted.txt  random_base.txt  random_shifted.txt
